# lighttpd-mod_fd_transfer

./: COPYING  INSTALL  LibStratusInternals.doc  ModFDTransferInternals.doc  README
patches/lighttpd-1.4.30/: lighttpd-1.4.30.NEWFILE.doc_config_conf.d_fdtransfer.conf  lighttpd-1.4.30.NEWFILE.src_mod_fd_transfer.c  lighttpd-1.4.30.doc_config_modules.conf.patch  lighttpd-1.4.30.src_Makefile.am.patch  lighttpd-1.4.30.src_base.h.patch  lighttpd-1.4.30.src_connections.c.patch  lighttpd-1.4.30.src_plugin.c.patch  lighttpd-1.4.30.src_plugin.h.patch  lighttpd-1.4.30.src_response.c.patch  lighttpd-1.4.30.src_settings.h.patch
stratus/: INSTALL.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  stratus.pc.in
stratus/src/: Makefile.am  stratus.h  stratus_connection.c  stratus_handshake.c  stratus_logging.h  stratus_request.c  stratus_response.c  stratus_server.c  stratus_server.h  stratus_utility.c
stratus/test/: Makefile.am  http-code-server.c  static-file-fd-server.c  static-file-server.c  test-client.c  websocket-test-server.c  websocket-test.html
