SUBDIRS = src test

STRATUSROOT = $(DESTDIR)/$(datadir)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = stratus.pc

MAINTAINERCLEANFILES =	\
	aclocal.m4	\
	config.h	\
	config.h.in	\
	config.log	\
	config.status	\
	configure	\
	config.guess	\
	config.sub	\
	compile		\
	ltmain.sh	\
	depcomp		\
	Makefile.in	\
	Makefile	\
	install-sh	\
	missing		\
	stamp-h1	\
	core		\
	*~		\
svn-commit*
